--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "googleapis": "^162.0.0",
     "moment": "^2.30.1",
     "node-telegram-bot-api": "^0.66.0"
